Has link error solved.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="login-signup">
               <ul>
-                <li class="active"><a href="javasctipt:;">Login</a></li>
+                <li class="active"><a href="javascript:;">Login</a></li>
                 <li><a href="javascript:;">Signup</a></li>
               </ul>
             </div>
